--- a/css/styles.css
+++ b/css/styles.css
@@ -77,20 +77,15 @@ body {
 .logo-studio {
     color: #2E2F42;
 }
-
 /* /COMMON STYLES  END*/
 
 
 /* HEADER MOBILE STYLES START */
-
-
 @media screen and (min-width: 480px) {
     .container {
         width: 352px;
     }
 }
-
-
 
 .header-container {
     display: flex;
@@ -124,8 +119,6 @@ body {
  
 
 @media screen and (max-width: 767px) {
-   
-
     .mobile-menu {
         position: fixed;
         top: 0;
@@ -247,13 +240,70 @@ body {
         }
 
 }
-
 /* /HEADER  MOBILE STYLES END */
 
 
 
+/* HERO MOBILE STYLES START */
+.hero-section {
+    /* max-width: 767px; */
+    padding-top: 72px;
+    padding-bottom: 72px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-hero-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
 
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px),
+screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-hero-bg@2x.jpg);
+    }
+}
 
+.main-title {
+    max-width: 157px;
+    margin: 0 auto;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+}
+
+.order-service-button {
+    min-width: 169px;
+    height: 56px;
+    color: #FFFFFF;
+    background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    display: block;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-service-button:hover,
+.order-service-button:focus {
+    background-color: #404BBF;
+}
+/* /HERO MOBILE STYLES END */
 
 
 
@@ -267,6 +317,7 @@ body {
 }
 .container {
     width: 768px;
+    
 }
 
 
@@ -298,9 +349,6 @@ body {
     flex-direction: column;
     gap: 12px;
 }
-
-
-
 
 .navigation-link {
     display: block;
@@ -349,16 +397,11 @@ body {
 
 
 }
-
- 
-
-
 /* /HEADER TABLET STYLES  END*/
 
 
 
 /* /HEADER DESKTOP STYLES  START*/
-
 @media screen and (min-width: 1158px) {
     .container {
         width: 1158px;
@@ -391,4 +434,81 @@ body {
 
 /* /HEADER DESKTOP STYLES  END*/
 
+
+/* HERO TABLET STYLES START */
+
+@media screen and (min-width: 768px) {
+    .hero-section {
+    width: 768px;
+    padding-top: 112px;
+    padding-bottom: 112px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-hero-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 auto;
+    }  
+    .hero-container {
+        gap: 36px;
+    }
+
+    .main-title {
+        max-width: 496px;
+        font-size: 56px;
+        font-weight: 700;
+        line-height: 1.07;
+        letter-spacing: 0.02em;
+    }
+    
+}
+
+ @media screen and (min-resolution: 192dpi) and (min-width: 768px),
+ screen and (min-resolution: 2dppx) and (min-width: 768px),
+ screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+     .hero-section {
+         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-hero-bg@2x.jpg);
+         
+     }
+ }
+
+/* /HERO TABLET STYLES END */
+
+
+
+
+
+/* HERO DESKTOP STYLES START */
+
+@media screen and (min-width: 1158px) {
+    .hero-section {
+        width: 1158px;
+        padding-top: 188px;
+        padding-bottom: 188px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desktop-hero-bg.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin: 0 auto;
+    }
+
+    .hero-container {
+        gap: 48px;
+    }
+
+    .main-title {
+        font-size: 56px;
+    }
+
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
+screen and (min-resolution: 2dppx) and (min-width: 1158px),
+screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desktop-hero-bg@2x.jpg);
+
+    }
+}
+
+/* /HERO DECKTOP STYLES END */
 
