--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ a {
 
 img {
     display: block;
+    
 }
 
 button {
@@ -617,6 +618,149 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
         
     }
 /* /ADVANTAGE SECTION DESKTOP STYLES START */
+
+
+/* TEAM SECTION MOBILE STYLES START */
+
+    .team {
+        padding-top: 96px;
+        padding-bottom: 96px;
+        background: #F4F4FD;
+    }
+
+    .team-description {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 72px;
+    
+    }
+
+    .team-title{
+        color: #2E2F42;
+        text-align: center;
+        font-family: Roboto;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        margin-bottom: 72px;
+    }
+
+        .team-icon-list {
+            display: flex;
+            gap: 24px;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        .team-icon-item {
+            display: flex;
+            width: 40px;
+            height: 40px;
+            justify-content: center;
+            align-items: center;
+    
+        }
+    
+        .team-icon {
+            display: block;
+            fill: #f4f4fd;
+        }
+    
+        .team-icon-link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            background-color: #4D5AE5;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            border-radius: 50%;
+        }
+    
+        .team-icon-link:hover,
+        .team-icon-link:focus {
+            background-color: #404BBF;
+        }
+
+        .team-field {
+            max-width: 264px;
+            background-color: #FFFFFF;
+            border-radius: 0px 0px 4px 4px;
+            box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+                }
+        
+        .team-info {
+            display: flex;
+            flex-direction: column;
+            padding: 32px 0;
+            gap: 8px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .team-name {
+            color: #2E2F42;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            text-align: center;
+        }
+        
+        .team-position {
+            color: #434455;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            text-align: center;
+        }
+
+/* /TEAM SECTION MOBILE STYLES END */
+
+/* TEAM SECTION TABLET STYLES START */
+
+@media screen and (min-width: 768px) {
+    .team-description {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            row-gap: 64px;
+            column-gap: 24px;
+            
+        }
+
+        .team-field {
+            margin: 0;
+        }
+}
+/* /TEAM SECTION TABLET STYLES END */
+
+/* TEAM SECTION DESKTOP STYLES START */
+
+@media screen and (min-width: 1158px) {
+
+    .team {
+            padding-top: 120px;
+            padding-bottom: 120px;
+        }
+
+    .team-description {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 24px;
+        
+
+    }
+
+    .team-field {
+        margin: 0;
+    }
+}
+/* /TEAM SECTION DESKTOP STYLES END */
 
 
 
