--- a/css/styles.css
+++ b/css/styles.css
@@ -863,6 +863,235 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
 }
 /* PORTFOLIO SECTION DESKTOP STYLES END */
 
+/* FOOTER SECTION MOBILE STYLES START */
+
+    .footer-section {
+        background: #2E2F42;
+        padding-top: 96px;
+        padding-bottom: 96px;
+    }
+
+    .footer-left-part {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 72px;
+    }
+
+    .logo-web-footer {
+        display: inline-block;
+        margin-bottom: 16px;
+        color: #4D5AE5;
+        font-family: "Raleway", sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
+    
+    .logo-studio-footer {
+        color: #f4f4fd;
+    }
+    
+    .footer-text {
+        width: 264px;
+        color: #F4F4FD;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
+    .footer-right-part {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 72px;
+    }
+
+    .footer-social-menu {
+        display: flex;
+        gap: 16px;
+    }
+
+    .footer-social-media-title {
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        margin-bottom: 16px;
+    }
+
+    .footer-link {
+        display: flex;
+        width: 40px;
+        height: 40px;
+        background-color: #4D5AE5;
+        border-radius: 50%;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        }
+    
+        .footer-link:hover,
+        .footer-link:focus {
+            background-color: #31D0AA;
+        }
+    
+        .footer-icons {
+            fill: #f4f4fd;
+        }
+
+        .footer-subscribe-part {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .footer-subs-form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 16px;
+            
+        }
+
+        .label-in-form {
+            display: block;
+        }
+
+        .footer-label {
+            color: #FFFFFF;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            margin-bottom: 16px;
+            text-align: center;
+        }
+
+        .footer-input::placeholder {
+            color: #FFFFFF;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 2;
+            letter-spacing: 0.04em;
+        }
+    
+        .footer-input {
+            background-color: transparent;
+            color: #ffffff;
+            width: 264px;
+            height: 40px;
+            padding-left: 16px;
+            border-radius: 4px;
+            border: 1px solid #FFFFFF;
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            font-size: 12px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            /* padding-left: 16px; */
+        }
+
+        .footer-subs-btn {
+            min-width: 165px;
+            height: 40px;
+            border: none;
+            display: flex;
+            padding: 8px 24px;
+            justify-content: center;
+            align-items: center;
+            border-radius: 4px;
+            background-color: #4D5AE5;
+            align-self: center;
+            color: #FFFFFF;
+            font-family: "Roboto", sans-serif;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+        }
+
+         .telegram-icon {
+            margin-left: 16px;
+        }
+    
+
+/* FOOTER SECTION MOBILE STYLES END */
+
+/* FOOTER SECTION TABLET STYLES START */
+
+@media screen and (min-width: 768px) {
+
+
+    .footer-tablet-info {
+        display: flex;
+        gap: 24px;
+        padding-left: 78px;
+        align-items: flex-start;
+    }
+        .footer-subs-form {
+            flex-direction: row;
+            gap: 24px;
+        }
+    
+    .footer-subscribe-part {
+        padding-left: 78px;
+        align-items: flex-start;
+    }
+
+    .footer-left-part {
+        align-items: flex-start;
+    }
+
+    .footer-right-part {
+        align-items: flex-start;
+    }
+       
+}
+/* FOOTER SECTION TABLET STYLES END */
+
+/* FOOTER SECTION DESKTOP STYLES START */
+
+
+@media screen and (min-width: 1158px) {
+    .footer-section {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+        .footer-container {
+            display: flex;
+            align-items: baseline;
+            justify-content: space-between;
+        }
+    
+        .footer-left-part {
+            margin-right: 0;
+            margin-bottom: 0;
+        }
+
+        .footer-tablet-info {
+            gap: 120px;
+            padding-left: 0;
+        }
+
+        .footer-subscribe-part {
+            padding-left: 0;
+            margin-left: 80px;
+        }
+
+        .footer-right-part {
+            margin-bottom: 0;
+            align-items: flex-start;
+        }
+}
+/* FOOTER SECTION DESKTOP STYLES END */
 
 
 
