--- a/css/styles.css
+++ b/css/styles.css
@@ -839,6 +839,7 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
         .portfolio-four-sec:hover {
             box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
         }
+        
 }
 
 /* PORTFOLIO SECTION TABLET STYLES END */
@@ -860,6 +861,39 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
     .portfolio-four-sec {
         flex-basis: calc((100% - 2 * 24px) / 3);
     }
+
+        .overlay {
+            display: block;
+            position: absolute;
+            padding: 40px 32px;
+            background-color: #4D5AE5;
+            color: #F4F4FD;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transform: translateY(100%);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .overlay-card {
+            position: relative;
+            overflow: hidden;
+        }
+    
+        .portfolio-four-sec:hover .overlay {
+            transform: translateY(0);
+    
+    
+        }
+    
+        .portfolio-four-sec:hover {
+            box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+            cursor: pointer;
+        }
 }
 /* PORTFOLIO SECTION DESKTOP STYLES END */
 
@@ -1094,8 +1128,239 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
 /* FOOTER SECTION DESKTOP STYLES END */
 
 
+/* MODAL MENU MOBILE STYLES START */
+
+.modal-bg{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-window {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 288px;
+    min-height: 623px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 16px 24px 16px;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-btn {
+    position: absolute;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    top: 24px;
+    right: 24px;
+    padding: 0;
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.close-marker {
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover .close-marker,
+.modal-btn:focus .close-marker {
+    fill: #ffffff;
+}
+
+.modal-title {
+    color: #2E2F42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.name-field {
+    margin-bottom: 8px;
+}
+
+.label-style {
+    display: block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.input-icon {
+    position: relative;
+    margin-bottom: 8px;
+}
+
+.modal-input-field {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-field:focus-within {
+    border-color: #4D5AE5;
+}
+
+.modal-input-field:focus-within+.modal-icon {
+    fill: #4D5AE5;
+}
+
+.modal-icon {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    fill: #2E2F42;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.comment_field {
+    margin-bottom: 16px;
+}
+
+.comment {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment:focus-within {
+    border-color: #4D5AE5;
+}
+
+.checkbox_field {
+    margin-bottom: 24px;
+}
 
 
+.accept_text {
+    color: #8E8F99;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+
+.visually-hidden:checked+.accept_text>.checkbox_fake {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
+
+
+
+.checkbox_fake {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    fill: transparent;
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-right: 8px;
+}
+
+
+
+.privacy_policy_link {
+    color: #4d5ae5;
+    text-decoration: underline;
+}
+
+
+
+.send_button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    background: #4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* MODAL MENU MOBILE STYLES END */
+
+
+
+/* MODAL MENU TABLET STYLES START */
+
+@media screen and (min-width: 768px) {
+    .modal-window {
+        width: 408px;
+        min-height: 584px;
+    }
+}
+/* MODAL MENU TABLET STYLES END */
+
+
+
+/* MODAL MENU DESKTOP STYLES START */
+/* MODAL MENU DESKTOP STYLES END */
 
 
 
