--- a/css/styles.css
+++ b/css/styles.css
@@ -432,7 +432,7 @@ screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
 
 @media screen and (min-width: 768px) {
     .hero-section {
-        width: 768px;
+        max-width: 768px;
         padding-top: 112px;
         padding-bottom: 112px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-hero-bg.jpg);
@@ -471,7 +471,7 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
 
 @media screen and (min-width: 1158px) {
     .hero-section {
-        width: 1440px;
+        max-width: 1440px;
         padding-top: 188px;
         padding-bottom: 188px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desktop-hero-bg.jpg);
